<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/teamButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="teamButtonClicked"
        android:text="Pokemon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <Button
        android:id="@+id/pokedexButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pokedexButtonClicked"
        android:text="Pokedex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamButton"
        app:layout_constraintVertical_bias="0.331" />

    <Button
        android:id="@+id/storageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="storageButtonClicked"
        android:text="Storage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokedexButton" />
</androidx.constraintlayout.widget.ConstraintLayout>