<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titleLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleScreen">

    <ImageView
        android:id="@+id/title"
        android:layout_width="230dp"
        android:layout_height="111dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/characterTitle"
        android:layout_width="115dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/titlescreen_character" />

    <ImageView
        android:id="@+id/pokemonTitle"
        android:layout_width="158dp"
        android:layout_height="159dp"
        android:layout_marginTop="178dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/characterTitle"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.016"
        app:srcCompat="@drawable/pokeball" />
</androidx.constraintlayout.widget.ConstraintLayout>